--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "V2Ray",
-    "description": "Deploy V2ray on Heroku.",
+    "name": "v2ray-kh",
+    "description": "v2ray-hk",
     "keywords": [
         "V2Ray"
     ],
